<resources>
    <string name="app_name">Body Buddy</string>
    <string name="icon_login">Login Icon</string>
    <string name="icon_register">Register Icon</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_input_age">Your Age</string>
    <string name="action_your_height">Your Height</string>
    <string name="action_input_weight">Your Weight</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_info">Food Info</string>
    <string name="title_notifications">Profile</string>
    <string name="title_food_database">Food Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_3_dialog_delete_confirmation">Confirm Delete?</string>
    <string name="delete">Delete</string>
    <string name="close">Close\n</string>
    <string name="example_3_input_dialog_title">Dialog Title</string>
    <string name="save">Save</string>
    <string name="example_3_empty_input_text">Empty!</string>
    <string name="username">Username</string>
    <string name="title_calendar">Calendar</string>
    <string name="action_password_input">Password</string>
    <string name="action_email_input">Email</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_login">Login</string>
    <string name="divider_text">OR</string>
    <string name="action_login_google">Login with Google</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="action_register">Register</string>
    <string name="action_username">Username</string>
    <string name="register_success">Success!</string>
    <string name="invalid_name"><![CDATA[Username Must be > 5 Characters!]]></string>
    <string name="invalid_password"><![CDATA[Password Must be > 5 Characters!]]></string>
    <string name="action_already_have_an_account">Already Have an Account?</string>
    <string name="action_dont_have_account">Don\'t Have an Account?</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_log_in_or_register_to_body_buddy">Please Log in to Body Buddy</string>
    <string name="text_register_with_your_email">Register with Your Email</string>
    <string name="text_calories">Calories: %1$.1f</string>
    <string name="text_carbs">Carbs: %1$.1f</string>
    <string name="text_fats">Fats: %1$.1f</string>
    <string name="text_protein">Protein: %1$.1f</string>
    <string name="text_tell_us_more_about_you">Tell us More About You!</string>
    <string name="text_daily_summary">Daily Summary</string>
    <string name="action_log_out">Log Out</string>
    <string name="text_unavailable_log_data">Oops! Looks like you have no data for today..</string>
    <string name="action_send_password_reset_email">Send Password Reset Email</string>
    <string name="action_enter_your_email_address">Enter Your Email Address</string>

    <string-array name="meals_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
</resources>