<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bodybuddy.ui.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.bodybuddy.ui.main.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bodybuddy.ui.main.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_food_info"
        android:name="com.example.bodybuddy.ui.main.ui.food_info.FoodInfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_food_info"/>

</navigation>