<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_welcome"
            android:textSize="32sp"
            android:textColor="@color/blue_air_force"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvsubWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_log_in_or_register_to_body_buddy"
            app:layout_constraintStart_toStartOf="@id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/login_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            app:lottie_speed="0.3"
            app:layout_constraintTop_toBottomOf="@id/tvsubWelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_loop="false"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/login_lottie"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            android:hint="@string/action_email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:endIconMode="password_toggle"
            android:hint="@string/action_password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/blue_air_force"
            android:text="@string/action_dont_have_account"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAllCaps="false"
            android:text="@string/action_login"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintBottom_toTopOf="@id/btn_google_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/divider_text"
            app:layout_constraintTop_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintBottom_toBottomOf="@id/divider"/>

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/action_login_google"
            android:drawableLeft="@drawable/ic_google"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>